voting system 25% done

--- a/client/Kelp/src/app/components/add-comment/add-comment.component.css
+++ b/client/Kelp/src/app/components/add-comment/add-comment.component.css
@@ -1,6 +1,10 @@
 .block {
   margin-left: 40px;
   background-color: rgb(255, 215, 86);
-  width: 50vw;
+  width: 70vw;
   padding: 10px;
+}
+
+.width {
+  width: 50vw;
 }
